k8s/base/gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
    app.kubernetes.io/name: gateway
    app.kubernetes.io/part-of: smartretailx
spec:
  type: ClusterIP
  selector:
    app: gateway
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
